update(admin board): fixed ui alignments in app marketplace

--- a/src/components/styles/document.scss
+++ b/src/components/styles/document.scss
@@ -18,10 +18,6 @@
  * SPDX-License-Identifier: Apache-2.0
  ********************************************************************************/
 
-.appdetail-documents {
-  padding-top: 85px;
-}
-
 .document-main {
   margin-bottom: 50px;
 }
